[package]
name = "voicepeak-cli"
version = "0.3.0"
edition = "2021"
authors = ["Petamori Kei <petamorikei@gmail.com>"]
description = "A command-line interface wrapper for VOICEPEAK text-to-speech software"
readme = "README.md"
homepage = "https://github.com/petamorikei/voicepeak-cli"
repository = "https://github.com/petamorikei/voicepeak-cli"
license = "MIT"
keywords = ["voicepeak", "tts", "text-to-speech", "cli", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = ["target/*", ".github/*", "CLAUDE.md"]

[[bin]]
name = "vp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"
